generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

enum Size {
  XS
  S
  M
  L
  XL
  XXL
  XXXL
}

enum Gender {
  men
  women
  kid
  unisex
}

enum Role {
  admin
  user
}

model Category {
  id      String    @id @default(uuid())
  name    String    @unique
  Product Product[]
}

model Product {
  id          String   @id @default(uuid())
  title       String
  description String
  price       Float    @default(0)
  sizes       Size[]   @default([])
  inStock     Int
  slug        String   @unique
  tags        String[] @default([])
  gender      Gender

  // Relaciones
  category     Category       @relation(fields: [categoryId], references: [id])
  categoryId   String
  ProductImage ProductImage[]
  OrderItem    OrderItem[]

  @@index([gender])
}

model ProductImage {
  id  String @id @default(uuid())
  url String

  // Relaciones
  product   Product @relation(fields: [productId], references: [id])
  productId String
}

model User {
  id           String    @id @default(uuid())
  name         String
  email        String    @unique
  emailVerifed DateTime?
  password     String
  role         Role      @default(user)
  image        String?

  Address UserAddress?

  // Relaciones
  Order Order[]
}

model Country {
  id           String         @id
  name         String
  Address      UserAddress[]
  OrderAddress OrderAddress[]
}

model UserAddress {
  id         String  @id @default(uuid())
  firstName  String
  lastName   String
  address    String
  address2   String?
  postalCode String
  phone      String
  city       String
  // Relaciones
  country    Country @relation(fields: [countryId], references: [id])
  countryId  String

  user   User   @relation(fields: [userId], references: [id])
  userId String @unique
}

// Orden de compras

model Order {
  id           String        @id @default(uuid())
  subTotal     Float
  tax          Float
  total        Float
  itemsInOrder Int
  isPaid       Boolean       @default(false)
  paidAt       DateTime?
  createdAt    DateTime      @default(now())
  updatedAt    DateTime      @updatedAt
  // Relaciones
  user         User          @relation(fields: [userId], references: [id])
  userId       String
  OrderItem    OrderItem[]
  OrderAddress OrderAddress?

  transactionId String?
}

model OrderItem {
  id        String  @id @default(uuid())
  quantity  Int
  price     Float
  size      Size
  // Relaciones
  order     Order   @relation(fields: [orderId], references: [id])
  orderId   String
  product   Product @relation(fields: [productId], references: [id])
  productId String
}

model OrderAddress {
  id         String  @id @default(uuid())
  firstName  String
  lastName   String
  address    String
  address2   String?
  postalCode String
  city       String
  phone      String
  // Relaciones
  country    Country @relation(fields: [countryId], references: [id])
  countryId  String
  Order      Order   @relation(fields: [orderId], references: [id])
  orderId    String  @unique
}

generator dbml {
  provider = "prisma-dbml-generator"
}
