//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Category {
  id String [pk]
  name String [unique, not null]
  Product Product [not null]
}

Table Product {
  id String [pk]
  title String [not null]
  description String [not null]
  price Float [not null, default: 0]
  sizes Size[] [not null]
  inStock Int [not null]
  slug String [unique, not null]
  tags String[] [not null]
  gender Gender [not null]
  category Category [not null]
  categoryId String [not null]
  ProductImage ProductImage [not null]
  OrderItem OrderItem [not null]
}

Table ProductImage {
  id String [pk]
  url String [not null]
  product Product [not null]
  productId String [not null]
}

Table User {
  id String [pk]
  name String [not null]
  email String [unique, not null]
  emailVerifed DateTime
  password String [not null]
  role Role [not null, default: 'user']
  image String
  Address UserAddress
  Order Order [not null]
}

Table Country {
  id String [pk]
  name String [not null]
  Address UserAddress [not null]
  OrderAddress OrderAddress [not null]
}

Table UserAddress {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  address String [not null]
  address2 String
  postalCode String [not null]
  phone String [not null]
  city String [not null]
  country Country [not null]
  countryId String [not null]
  user User [not null]
  userId String [unique, not null]
}

Table Order {
  id String [pk]
  subTotal Float [not null]
  tax Float [not null]
  total Float [not null]
  itemsInOrder Int [not null]
  isPaid Boolean [not null, default: false]
  paidAt DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  userId String [not null]
  OrderItem OrderItem [not null]
  OrderAddress OrderAddress
  transactionId String
}

Table OrderItem {
  id String [pk]
  quantity Int [not null]
  price Float [not null]
  size Size [not null]
  order Order [not null]
  orderId String [not null]
  product Product [not null]
  productId String [not null]
}

Table OrderAddress {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  address String [not null]
  address2 String
  postalCode String [not null]
  city String [not null]
  phone String [not null]
  country Country [not null]
  countryId String [not null]
  Order Order [not null]
  orderId String [unique, not null]
}

Enum Size {
  XS
  S
  M
  L
  XL
  XXL
  XXXL
}

Enum Gender {
  men
  women
  kid
  unisex
}

Enum Role {
  admin
  user
}

Ref: Product.categoryId > Category.id

Ref: ProductImage.productId > Product.id

Ref: UserAddress.countryId > Country.id

Ref: UserAddress.userId - User.id

Ref: Order.userId > User.id

Ref: OrderItem.orderId > Order.id

Ref: OrderItem.productId > Product.id

Ref: OrderAddress.countryId > Country.id

Ref: OrderAddress.orderId - Order.id